k8s/kc-spin-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kc-spin
  name: kc-spin
  namespace: kc-spin
spec:
  ports:
    - name: http-port
      port: 8080
      protocol: TCP
  selector:
    app: kc-spin
  sessionAffinity: None
  type: ClusterIP
